[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = "Verifiable Secret Sharing Schemes for splitting, combining and verifying secret shares"
documentation = "https://docs.rs/vsss-rs"
edition = "2021"
homepage = "https://github.com/mikelodder7/vsss-rs"
keywords = ["crypto", "sharing", "secret", "verifiable"]
license = "Apache-2.0 OR MIT"
name = "vsss-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/vsss-rs"
version = "5.0.0-pre5"

[features]
default = ["std", "serde"]
serde = ["dep:serde", "crypto-bigint/serde", "num/serde", "generic-array/serde", "elliptic-curve-tools"]
alloc = ["rand_core/alloc", "rand/alloc", "serde?/alloc", "num/std", "num/rand", "hex/alloc", "elliptic-curve-tools?/alloc"]
curve25519 = ["curve25519-dalek", "alloc"]
std = ["num/std", "num/rand", "rand_core/std", "rand/std", "hex/std", "serde?/std", "elliptic-curve-tools?/std"]

[dependencies]
crypto-bigint = { version = "0.5", features = ["zeroize"] }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "group"], optional = true }
elliptic-curve = { version = "0.13", features = ["ecdh"] }
elliptic-curve-tools = { version = "0.1.1", default-features = false, optional = true }
generic-array = "1"
num = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false }
rand_core = "0.6"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
subtle = { version = "2.5" }
sha3 = { version = "0.10", default-features = false }
thiserror-no-std = "2.0"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
bls12_381_plus = "0.8"
ciborium = "0.2.2"
ed25519-dalek = "2.1.1"
ed448-goldilocks-plus = "0.11.2"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic", "bits"] }
p256 = { version = "0.13", features = ["arithmetic", "bits"] }
p384 = { version = "0.13", features = ["arithmetic", "bits"] }
p521 = { version = "0.13", features = ["arithmetic"] }
postcard = { version = "1.0", features = ["use-std"] }
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3.1"
rand_xorshift = "0.3"
rstest = "0.22"
serde_bare = "0.5"
serde_cbor = "0.11.2"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }