[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = "Verifiable Secret Sharing Schemes for splitting, combining and verifying secret shares"
documentation = "https://docs.rs/vsss-rs"
edition = "2021"
homepage = "https://github.com/mikelodder7/vsss-rs"
keywords = ["crypto", "sharing", "secret", "verifiable"]
license = "Apache-2.0 OR MIT"
name = "vsss-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/vsss-rs"
version = "5.1.0"

[features]
default = ["bigint", "primitive", "serde", "std", "zeroize"]
alloc = ["rand_core/alloc", "rand/alloc", "serde?/alloc", "crypto-bigint?/alloc", "num?/std", "num?/rand", "hex?/alloc", "elliptic-curve-tools?/alloc"]
bigint = ["dep:crypto-bigint"]
curve25519 = ["curve25519-dalek", "alloc", "hex"]
primitive = ["num"]
serde = ["dep:serde", "crypto-bigint/serde", "num/serde", "generic-array/serde", "elliptic-curve-tools"]
std = ["alloc", "num/std", "num/rand", "rand_core/std", "rand/std", "hex/std", "serde?/std", "elliptic-curve-tools?/std"]
zeroize = ["crypto-bigint?/zeroize", "dep:zeroize"]

[dependencies]
crypto-bigint = { version = "0.5", optional = true }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "group", "group-bits"], optional = true }
elliptic-curve = { version = "0.13", features = ["ecdh"] }
elliptic-curve-tools = { version = "0.1.1", default-features = false, optional = true }
generic-array = "1"
num = { version = "0.4", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
subtle = { version = "2.6" }
sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
bls12_381_plus = "0.8"
ciborium = "0.2.2"
ed25519-dalek = "2.1.1"
ed448-goldilocks-plus = "0.13"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic", "bits"] }
p256 = { version = "0.13", features = ["arithmetic", "bits"] }
postcard = { version = "1.0", features = ["use-std"] }
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3.1"
rand_xorshift = "0.3"
rstest = "0.23"
serde_bare = "0.5"
serde_cbor = "0.11.2"
serde_json = "1.0"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
