[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = "Verifiable Secret Sharing Schemes for splitting, combining and verifying secret shares"
documentation = "https://docs.rs/vsss-rs"
edition = "2024"
homepage = "https://github.com/mikelodder7/vsss-rs"
keywords = ["crypto", "sharing", "secret", "verifiable"]
license = "Apache-2.0 OR MIT"
name = "vsss-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/vsss-rs"
version = "6.0.0-rc0"

[features]
default = ["bigint", "primitive", "serde", "std", "zeroize"]
alloc = ["rand/alloc", "serde?/alloc", "crypto-bigint?/alloc", "num?/std", "num?/rand", "hex?/alloc", "elliptic-curve-tools?/alloc"]
bigint = ["dep:crypto-bigint", "dep:num"]
primitive = ["dep:num"]
serde = ["dep:serde", "elliptic-curve/serde", "crypto-bigint?/serde", "num/serde", "generic-array/serde", "hybrid-array/serde", "elliptic-curve-tools/serde"]
std = ["alloc", "num/std", "num/rand", "rand/std", "hex/std", "serde?/std", "elliptic-curve-tools?/std"]
zeroize = ["crypto-bigint?/zeroize", "dep:zeroize"]
legacy-curve-tests = []

[dependencies]
crypto-bigint = { version = "0.7", optional = true }
elliptic-curve = { version = "0.14.0", features = ["ecdh"] }
elliptic-curve-tools = { version = "0.3.0", default-features = false, optional = true }
generic-array = "1.3"
hybrid-array = "0.4.6"
num = { version = "0.4", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
rand_core = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
subtle = { version = "2.6" }
sha3 = { version = "0.12", default-features = false }
shake = { version = "0.1", default-features = false }
zeroize = { version = "1", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
bls12_381_plus = "0.8"
ciborium = "0.2.2"
curve25519-dalek = { version = "5.0.0-rc.1", features = ["digest", "group"] }
ed25519-dalek = "3.0.0-rc.1"
ed448-goldilocks-plus = "0.16"
hex = "0.4"
hash2curve = "0.14"
k256 = { version = "0.14.0-rc.14", features = ["arithmetic"] }
p256 = { version = "0.14.0-rc.14", features = ["arithmetic"] }
postcard = { version = "1.0", features = ["use-std"] }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng"] }
rand_chacha = "0.10"
rand_xorshift = "0.5"
rstest = "0.26"
serde_bare = "0.5"
serde_cbor = "0.11.2"
serde_json = "1.0"
sha2 = "0.11"
x25519-dalek = { version = "3.0.0-rc.1", features = ["static_secrets"] }

[package.metadata.cargo-udeps.ignore]
development = ["bls12_381_plus", "ed448-goldilocks-plus", "hash2curve", "rstest"]
